--- a/Web_HP/Web_HP/Views/Shared/_Layout.cshtml
+++ b/Web_HP/Web_HP/Views/Shared/_Layout.cshtml
@@ -38,21 +38,22 @@
                                 Chansons
                             </a>
                             <div class="dropdown-menu">
-                                <a class="dropdown-item" href="~/Home/Chansons">Chansons</a>
-                                <a class="dropdown-item" href="~/Home/Chanteurs">Chanteurs</a>
-                                <a class="dropdown-item" href="~/Home/Albums">Albums</a>
+                                <a class="dropdown-item" href="~/Home2/Chansons">Chansons</a>
+                                <a class="dropdown-item" href="~/Home2/Chanteurs">Chanteurs</a>
+                                <a class="dropdown-item" href="~/Home2/Albums">Albums</a>
                             </div>
                         </li>
                         <!-- Dropdown pour les médias -->
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-                                Médias
+                                Medias
                             </a>
                             <div class="dropdown-menu">
-                                <a class="dropdown-item" href="#">Films</a>
-                                <a class="dropdown-item" href="#">Séries</a>
-                                <a class="dropdown-item" href="#">Acteurs</a>
-                                <a class="dropdown-item" href="#">Directeurs</a>
+                            <a class="dropdown-item" href="~/Home2/Movies">Films</a>
+                            <a class="dropdown-item" href="~/Home2/Series">Séries</a>
+                            <a class="dropdown-item" href="~/Home2/Acteurs">Acteurs</a>
+                            <a class="dropdown-item" href="~/Home2/Directeurs">Directeurs</a>
+
                             </div>
                         </li>
                         <!-- Icône de connexion -->
